# Othello

./: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  BoardGraphic.cpp  BoardGraphic.h  CMakeLists.txt  Cell.h  ClassicRules.cpp  ClassicRules.h  ConsoleBoard.cpp  ConsoleBoard.h  ConsoleMenu.cpp  ConsoleMenu.h  ConsoleToken.cpp  GameFlow.cpp  GameFlow.h  GameRules.h  Menu.cpp  Menu.h  Player.cpp  Player.h  RealPlayer.cpp  RealPlayer.h  TokenFactory.h  Tools.h  a.out  main.cpp
ex4/etc/: log.txt
ex4/exe/: client.out  ipAndPort  server.out
ex4/src/client/: makefile
ex4/src/client/gtest_src/: Test_CommandStart.cpp  Test_CommandStart.h  Test_board.cpp  Test_classicRules.cpp  main_test.cpp
ex4/src/client/src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  BoardGraphic.cpp  BoardGraphic.h  Cell.h  ClassicRules.cpp  ClassicRules.h  ConsoleBoard.cpp  ConsoleBoard.h  ConsoleMenu.cpp  ConsoleMenu.h  ConsoleToken.cpp  ConsoleToken.h  ConsoleTokenFactory.cpp  ConsoleTokenFactory.h  Game.cpp  Game.h  GameFlow.cpp  GameFlow.h  GameRules.h  Menu.cpp  Menu.h  Player.cpp  Player.h  RealPlayer.cpp  RealPlayer.h  RemotePlayer.cpp  RemotePlayer.h  ReversiClient.cpp  ReversiClient.h  Token.cpp  Token.h  TokenFactory.h  Tools.h  main.cpp
ex4/src/server/: Command.h  CommandClose.cpp  CommandClose.h  CommandGetList.cpp  CommandGetList.h  CommandJoin.cpp  CommandJoin.h  CommandKillAll.cpp  CommandKillAll.h  CommandPlay.cpp  CommandPlay.h  CommandStart.cpp  CommandStart.h  CommandsManager.cpp  CommandsManager.h  GameManager.cpp  GameManager.h  HandleClient.cpp  HandleClient.h  ReversiServer.cpp  ReversiServer.h  main.cpp  makefile
ex4/src/server/src/: Command.h  CommandClose.cpp  CommandGetList.cpp  CommandJoin.cpp  CommandKillAll.cpp  CommandKillAll.h  CommandPlay.cpp  CommandStart.cpp  CommandStart.h  CommandsManager.cpp  GameManager.cpp  GameManager.h  HandleClient.cpp  HandleClient.h  HandleClientReversi.cpp  HandleClientReversi.h  ReversiServer.cpp  ReversiServer.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  main.cpp
gtest_src/: Test_AIPlayer.cpp  Test_AIPlayer.h  Test_Token_.cpp  Test_Token_.h  Test_board.cpp  Test_board.h  Test_classicRules.cpp  Test_classicRules.h  main_test.cpp  test_Board.cpp  test_Borad.cpp  testing.cpp
src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  BoardGraphic.cpp  BoardGraphic.h  BoardGraphic.h.gch  Cell.h  Cell.h.gch  ClassicRules.h  ConsoleBoard.cpp  ConsoleBoard.h  ConsoleMenu.cpp  ConsoleMenu.h  ConsoleToken.cpp  ConsoleToken.h  GameFlow.cpp  GameFlow.h  GameRules.h  Menu.cpp  Menu.h  Player.cpp  Player.h  RealPlayer.cpp  RealPlayer.h  Token.cpp  Token.h  TokenFactory.h  Tools.h  main.cpp  makefile
src/Server/: ReversiServer.cpp  ReversiServer.h
src/client/gtest_src/: Test_AIPlayer.cpp  Test_AIPlayer.h  Test_classicRules.h
src/client/src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  BoardGraphic.cpp  BoardGraphic.h  Cell.h  ClassicRules.cpp  ConsoleBoard.cpp  ConsoleBoard.h  ConsoleTokenFactory.cpp  ConsoleTokenFactory.h  DemoPlayer.cpp  DemoPlayer.h  Game.cpp  Game.h  GameFlow.cpp  GameFlow.h  GameRules.h  Menu.cpp  Player.cpp  Player.h  RealPlayer.cpp  RealPlayer.h  RemotePlayer.cpp  RemotePlayer.h  ReversiClient.cpp  ReversiClient.h  Token.h  Tools.h  a.out  main.cpp
src/server/: ReversiServer.cpp  ReversiServer.h  main.cpp
